// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`colon prop 1`] = `
<form class="ca2-form">
  <div class="ca2-cell ca2-field">
    <div class="ca2-cell__title ca2-field__label"><span>Label:</span></div>
    <div class="ca2-cell__value ca2-field__value">
      <div class="ca2-field__body"><input type="text" class="ca2-field__control"></div>
    </div>
  </div>
  <div class="ca2-cell ca2-field">
    <div class="ca2-cell__title ca2-field__label">Custom Label:</div>
    <div class="ca2-cell__value ca2-field__value">
      <div class="ca2-field__body"><input type="text" class="ca2-field__control"></div>
    </div>
  </div>
</form>
`;

exports[`error-message-align prop 1`] = `
<form class="ca2-form">
  <div class="ca2-cell ca2-field">
    <div class="ca2-cell__value ca2-cell__value--alone ca2-field__value">
      <div class="ca2-field__body"><input type="text" class="ca2-field__control"></div>
      <div class="ca2-field__error-message ca2-field__error-message--right">Error</div>
    </div>
  </div>
</form>
`;

exports[`input-align prop 1`] = `
<form class="ca2-form">
  <div class="ca2-cell ca2-field">
    <div class="ca2-cell__value ca2-cell__value--alone ca2-field__value">
      <div class="ca2-field__body"><input type="text" class="ca2-field__control ca2-field__control--right"></div>
    </div>
  </div>
  <div class="ca2-cell ca2-field">
    <div class="ca2-cell__value ca2-cell__value--alone ca2-field__value">
      <div class="ca2-field__body">
        <div class="ca2-field__control ca2-field__control--right ca2-field__control--custom">
          <div></div>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`label-align prop 1`] = `
<form class="ca2-form">
  <div class="ca2-cell ca2-field ca2-field--label-right">
    <div class="ca2-cell__title ca2-field__label ca2-field__label--right"><span>Label</span></div>
    <div class="ca2-cell__value ca2-field__value">
      <div class="ca2-field__body"><input type="text" class="ca2-field__control"></div>
    </div>
  </div>
  <div class="ca2-cell ca2-field ca2-field--label-center">
    <div class="ca2-cell__title ca2-field__label ca2-field__label--center"><span>Label</span></div>
    <div class="ca2-cell__value ca2-field__value">
      <div class="ca2-field__body"><input type="text" class="ca2-field__control"></div>
    </div>
  </div>
</form>
`;

exports[`label-width prop 1`] = `
<form class="ca2-form">
  <div class="ca2-cell ca2-field">
    <div class="ca2-cell__title ca2-field__label" style="width: 5rem;"><span>Label</span></div>
    <div class="ca2-cell__value ca2-field__value">
      <div class="ca2-field__body"><input type="text" class="ca2-field__control"></div>
    </div>
  </div>
  <div class="ca2-cell ca2-field">
    <div class="ca2-cell__title ca2-field__label" style="width: 10vw;"><span>Label</span></div>
    <div class="ca2-cell__value ca2-field__value">
      <div class="ca2-field__body"><input type="text" class="ca2-field__control"></div>
    </div>
  </div>
</form>
`;

exports[`validate-first prop 1`] = `
<form class="ca2-form">
  <div class="ca2-cell ca2-field ca2-field--error">
    <div class="ca2-cell__value ca2-cell__value--alone ca2-field__value">
      <div class="ca2-field__body"><input type="text" name="A" class="ca2-field__control"></div>
      <div class="ca2-field__error-message">A failed</div>
    </div>
  </div>
  <div class="ca2-cell ca2-field">
    <div class="ca2-cell__value ca2-cell__value--alone ca2-field__value">
      <div class="ca2-field__body"><input type="text" name="B" class="ca2-field__control"></div>
    </div>
  </div> <button type="submit" class="ca2-button ca2-button--default ca2-button--normal"></button>
</form>
`;
